# swipe-dating

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  MISSION.md  Makefile  README.md  SECURITY.md  deny.toml  package.json
.cursor/rules/: 00-project-constitution.mdc  10-security-privacy.mdc  20-mobile.mdc  30-backend.mdc  40-release.mdc
.cursor/state/: decentralized-dating-app-progress.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  safety_escalation.md
.github/workflows/: ci.yml  one-time-sync-adult-feature.yml
Research/: Blueprint for a Decentralized Swipe Dating App.md  deploy-decentralized-dating-app.md
approvals/: README.md
apps/android/: README.md  VERIFY.md  settings.gradle.kts
apps/ios/: Package.swift  README.md  VERIFY.md  project.yml
apps/rnd-api/: package.json
apps/rnd-mobile/: app.json  babel.config.js  index.js  package.json
apps/rnd-simulator/: package.json
config/: alignment-questionnaire-v1.json  brand.example.yaml  deployment.example.yaml  feature-flags.example.yaml  retention.example.yaml  rnd-alignment-questionnaire-v1.json
core/anti-abuse/: Cargo.toml
core/crypto/: Cargo.toml
core/crypto/src/: lib.rs
core/identity/: Cargo.toml
core/identity/src/: age.rs  lib.rs
core/matching/: Cargo.toml
core/matching/src/: alignment.rs  lib.rs  location.rs  location_share.rs  preferences.rs  proximity.rs
core/media/: Cargo.toml
core/messaging/: Cargo.toml
core/messaging/src/: lib.rs
core/profile/: Cargo.toml
core/profile/src/: lib.rs  skin_shop.rs
core/protocol/: Cargo.toml
core/protocol/src/: lib.rs  limits.rs  serde_hex.rs  types.rs  validate.rs
core/protocol/tests/: cbor_fuzz_smoke.rs  golden_vectors.rs
core/safety/: Cargo.toml
core/safety/src/: anti_abuse.rs  lib.rs
core/storage/: Cargo.toml
core/storage/src/: crypto.rs  key_provider.rs  lib.rs  sqlite_encrypted.rs
core/telemetry/: Cargo.toml
core/test-support/: Cargo.toml
core/transport-api/: Cargo.toml
core/uniffi-bindings/: Cargo.toml
core/uniffi-bindings/src/: age.rs  identity.rs  lib.rs  location.rs  matching.rs  protocol.rs  transport.rs  util.rs
docs/ai/: ai-decision-log.md
docs/architecture/: adr-0001-hybrid-local-first.md  adr-0002-webrtc-relay-first.md  adr-0003-e2ee-library.md  adr-0004-canonical-profile-format.md  adr-0005-mobile-shared-core.md  adr-0006-control-plane-storage.md  adr-0007-media-codecs.md  adr-0008-cloud-and-turn-provider.md  adr-0009-consent-based-proximity.md  adr-0009-consent-proximity.md  adr-0010-match-location-sharing.md  adr-0010-matched-location-sharing.md  adr-0011-local-sensitive-alignment.md  adr-0012-skin-shop-boundary.md  adr-0013-bot-sybil-defense.md  adr-0013-bot-sybil-resistance.md  adr-0014-javascript-rnd-reset.md  adr-0015-local-persistence-boundary.md  adr-0016-intent-driven-discovery.md  adr-0017-reciprocal-match-conversations.md  adr-0018-bilateral-relationship-transition.md  adr-0018-deepen-connection.md  adr-0019-javascript-only-consolidation.md  dependency-register.md  observability.md  protocol-overview.md  system-overview.md  trust-boundaries.md
docs/audits/: 2026-07-20-mission-readiness-review.md  2026-07-21-adult-feature-expansion-review.md  2026-07-21-adult-features-readiness-review.md  2026-07-21-javascript-rnd-reset.md
docs/execution/: command-integrity.txt  deploy-command.sha256  final-agent-report.md  phase-scaffold-notes.md  preflight-report.md
docs/governance/: README.md  child-safety-baseline.md  decentralization-limits.md  funding-and-impact-gates.md  ncii-takedown-baseline.md  release-gates.md  roles-and-owners.md  store-compliance-baseline.md
docs/handoffs/: 20260720-agent-loop-complete.md  20260720-ios-uniffi-loop.md  20260720-staging-scaffold.md  20260721-adult-consent-foundation.md
docs/impact/: README.md
docs/legal/: age-eligibility.md  app-store-review-checklist.md  dpia-draft.md  license-decision-required.md  privacy-notice-draft.md  terms-draft.md  terms-of-service.md
docs/operations/: age-appeals-runbook.DRAFT.md  cost-model.md  github-sync.md  google-drive-sync.md  incident-response.md  key-rotation.md  local-smoke.md  ramdisk.md  staging-deploy.md
docs/privacy/: age-assurance-data-flow.md  data-map.md  dpia-outline.md  privacy-policy.md
docs/product/: account-recovery-model.md  adult-feature-expansion.md  closed-beta-readiness.md  deepen-connection.md  intent-driven-discovery.md  known-privacy-limitations.md  market-launch-matrix.md  mvp-scope.md  reciprocal-match-conversations.md
docs/safety/: README.md  block-report-flows.md  child-safety-playbook.md  crisis-escalation.md  moderation-playbook.md  ncii-playbook.md  safety-center-draft.md  (+1 more)
migrations/: 0001_init_control_plane.sql
policies/: community-rules.md
scripts/: build-ios-uniffi.sh  check-active-javascript-surface.mjs  check-governance-contracts.mjs  check-javascript-consolidation.mjs  check-javascript-only-repository.mjs  check-javascript-syntax.mjs  check-unit-test-contracts.mjs  command_integrity_check.sh  feature_policy_check.sh  generate-uniffi.sh  git-sync.sh  local-services-up.sh  local-smoke.sh  production-preflight.mjs  production_preflight.sh  ramdisk.sh  run-tests.mjs  verify-mobile-web-export.mjs  verify-production-block.mjs  verify_staging_account.sh
services/common/: Cargo.toml
services/common/src/: lib.rs
services/push-broker/: Cargo.toml
services/push-broker/src/: lib.rs  main.rs
services/rendezvous/: Cargo.toml
services/rendezvous/src/: lib.rs  main.rs
services/report-ingest/: Cargo.toml
services/report-ingest/src/: lib.rs  main.rs
services/safety-console-api/: Cargo.toml
services/safety-console-api/src/: lib.rs  main.rs
services/sealed-mailbox/: Cargo.toml
services/sealed-mailbox/src/: lib.rs  main.rs
services/turn-credentials/: Cargo.toml
services/turn-credentials/src/: lib.rs  main.rs
tests/control-plane-integration/: Cargo.toml
tests/control-plane-integration/src/: lib.rs
tests/control-plane-integration/tests/: control_plane_http.rs
(+84 files in other folders)
