[workspace]
resolver = "2"
members = [
  "core/identity",
  "core/protocol",
  "core/crypto",
  "core/profile",
  "core/media",
  "core/matching",
  "core/messaging",
  "core/safety",
  "core/storage",
  "core/transport-api",
  "core/telemetry",
  "core/anti-abuse",
  "core/uniffi-bindings",
  "core/test-support",
  "services/common",
  "services/rendezvous",
  "services/push-broker",
  "services/turn-credentials",
  "services/sealed-mailbox",
  "services/report-ingest",
  "services/safety-console-api",
  "tests/control-plane-integration",
]
default-members = [
  "core/identity",
  "core/protocol",
  "core/crypto",
  "core/profile",
  "core/matching",
  "core/storage",
  "core/anti-abuse",
  "core/test-support",
  "services/common",
  "services/rendezvous",
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
blake3 = "1.8"
bytes = "1.10"
ciborium = "0.2"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "limit", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.17", features = ["serde", "v4"] }
zeroize = { version = "1.8", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
http = "1.3"
uniffi = { version = "0.29", features = ["cli"] }
aes-gcm = "0.10"
rusqlite = { version = "0.34", features = ["bundled"] }
rand = "0.8"
proptest = "1.6"
