[package]
name = "dating-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
dating-test-support = { path = "../test-support" }
