[package]
name = "dating-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dating-crypto = { path = "../crypto" }
dating-test-support = { path = "../test-support" }
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
rand_core = { workspace = true }
