[package]
name = "dating-matching"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dating-protocol = { path = "../protocol" }
dating-identity = { path = "../identity" }
dating-crypto = { path = "../crypto" }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
