[package]
name = "dating-messaging"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dating-protocol = { path = "../protocol" }
dating-crypto = { path = "../crypto" }
dating-matching = { path = "../matching" }
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
