[package]
name = "dating-profile"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dating-protocol = { path = "../protocol" }
dating-identity = { path = "../identity" }
dating-crypto = { path = "../crypto" }
dating-test-support = { path = "../test-support" }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand_core = { workspace = true }
