[package]
name = "dating-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dating-crypto = { path = "../crypto" }
dating-identity = { path = "../identity" }
dating-test-support = { path = "../test-support" }
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
dating-test-support = { path = "../test-support" }

[[test]]
name = "golden_vectors"
path = "tests/golden_vectors.rs"
