[package]
name = "dating-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dating-protocol = { path = "../protocol" }
dating-identity = { path = "../identity" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
aes-gcm = { workspace = true }
rusqlite = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
dating-test-support = { path = "../test-support" }
