[package]
name = "dating-uniffi-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "dating_uniffi_bindings"

[dependencies]
chrono = { workspace = true }
dating-crypto = { path = "../crypto" }
dating-identity = { path = "../identity" }
dating-matching = { path = "../matching" }
dating-protocol = { path = "../protocol" }
dating-test-support = { path = "../test-support" }
dating-transport-api = { path = "../transport-api" }
hex = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true }

[dev-dependencies]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[[bin]]
name = "print-staging-lease"
path = "src/bin/print-staging-lease.rs"
