[package]
name = "dating-services-common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
