[package]
name = "dating-rendezvous"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dating-services-common = { path = "../common" }
dating-protocol = { path = "../../core/protocol" }
dating-crypto = { path = "../../core/crypto" }
dating-identity = { path = "../../core/identity" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
dating-test-support = { path = "../../core/test-support" }

[lib]
name = "dating_rendezvous"
path = "src/lib.rs"

[dev-dependencies]
tower = { workspace = true }

[[bin]]
name = "rendezvous"
path = "src/main.rs"
