[package]
name = "dating-report-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dating-services-common = { path = "../common" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }

[lib]
name = "dating_report_ingest"
path = "src/lib.rs"

[dev-dependencies]
tower = { workspace = true }

[[bin]]
name = "report-ingest"
path = "src/main.rs"
