[package]
name = "dating-safety-console-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dating-services-common = { path = "../common" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }

[lib]
name = "dating_safety_console_api"
path = "src/lib.rs"

[dev-dependencies]
tower = { workspace = true }

[[bin]]
name = "safety-console-api"
path = "src/main.rs"
