[package]
name = "dating-sealed-mailbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dating-services-common = { path = "../common" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }

[lib]
name = "dating_sealed_mailbox"
path = "src/lib.rs"

[dev-dependencies]
tower = { workspace = true }

[[bin]]
name = "sealed-mailbox"
path = "src/main.rs"
