[package]
name = "control-plane-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dev-dependencies]
axum = { workspace = true }
dating-rendezvous = { path = "../../services/rendezvous" }
dating-report-ingest = { path = "../../services/report-ingest" }
dating-sealed-mailbox = { path = "../../services/sealed-mailbox" }
dating-services-common = { path = "../../services/common" }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
http-body-util = "0.1"
